--- a/style.css
+++ b/style.css
@@ -43,10 +43,16 @@ header {
 
 .logo {
     color: var(--text-color);
-    font-size: 35px;
+    /* font-size: 35px; */
     font-weight: 700;
     letter-spacing: 1px;
-    margin-right: 500px;
+    margin-right: 300px;
+    margin-top: 20px;
+    
+}
+.logo img{
+    width: 70px;
+    height: 70px;
 }
 
 span {
